marq overlap fix

--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -564,4 +564,7 @@ ul.slick-dots li.slick-active button {
         transform: translateX(-20px);
         transition: .2s ease-in;
     }
+    .marq-wrap-ribbon .marquee .marquee__group {
+        min-width: 82%;
+    }
 }
